syntax = "proto2";

message UpdateRequest {
    required bool   wantsUpdate  = 1;
    required uint32 versionMajor = 2;
    required uint32 versionMinor = 3;
    required uint32 versionPatch = 4;
    required string gameName     = 5;
    required string hostPlatform = 6;
}
